# omanote-desktop-build

./: .env.example  .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
convex/: README.md  account.test.ts  account.ts  admin.ts  auth.config.ts  bookmarks.test.ts  bookmarks.ts  canvas.ts  canvasDateQueries.test.ts  crons.ts  desktopAuth.ts  devices.test.ts  devices.ts  encryptionKeys.ts  events.ts  feedback.test.ts  feedback.ts  hashtags.test.ts  hashtags.ts  history.ts  insights.ts  notes.test.ts  notes.ts  plans.ts  pushSubscriptions.ts  reminderPush.ts  reminderPushHelpers.ts  rss.test.ts  rss.ts  schema.ts  shareViews.ts  sharedFolders.ts  sharedNoteFolders.ts  sharedTodoFolders.ts  sharedViews.test.ts  todos.test.ts  todos.ts  userSettings.test.ts  userSettings.ts  utils.ts
docs/: architecture.md  browser-extension.md  design-system.md  encryption.md  folder-collaboration.md  implementation-checklist.md  launch-readiness-review.md  local-first-sync-plan.md  mobile-app.md  motion-memory.md  prd.md  rss-reader.md
extension/: .env.example  manifest.firefox.json  manifest.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
public/: robots.txt  site.webmanifest  sitemap.xml  sw.js  version.json
scripts/: audit-colors.mjs  (+4 more)
(+372 files in other folders)
